<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nkhedekar.calculator2.MainActivity">

    <TextView
        android:id="@+id/res"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="168dp"
        android:layout_height="247dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0"
        android:weightSum="1">

        <TextView
            android:id="@+id/res1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/res2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/res3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/res4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/res5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="350dp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="352dp"
        android:layout_height="213dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/bmul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="57dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <Button
                android:id="@+id/bmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/bplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allClear" />

            <Button
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <Button
                android:id="@+id/bdiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />

            <Button
                android:id="@+id/beq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
